--- a/business-landing-page/index.html
+++ b/business-landing-page/index.html
@@ -57,31 +57,41 @@
     <!-- Sección de características (Features) -->
     <section class="features">
         <div class="features__description">
-            <h2 class="features__description__title">Features</h2>
-            <p class="features__description__paragraph">Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <h2 class="features__title">Features</h2>
+            <p class="features__paragraph">Most calendars are designed for teams. Slate is designed for freelancers</p>
         </div>
         <!-- Lista de características e integración de video -->
-        <div class="">
+        <div class="features__content">
             <div class="features__list">
                 <div class="feautures__item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/icons/figures.svg" alt="figures icon">
+                    <h3>OpenType Features Variable fonts</h3>
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your 
+                        financial goal.</p>
                 </div>
                 <div class="feautures__item">
-                    <img src="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/icons/brush.svg" alt="brush icon">
+                    <h3>Design with real data</h3>
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your 
+                        financial goal.</p>
                 </div>
                 <div class="feautures__item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="./images/icons/pencil.svg" alt="pencil icon">
+                    <h3>Fastest way to take action</h3>
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your 
+                        financial goal.</p>
                 </div>
             </div>
-            <div>
+            <div class="features__video">
                 <!-- Video -->
-                <video src="" controls autoplay muted loop></video>
+                <!-- Como no tenemos el video, usamos una imagen de referencia -->
+                <img src="./images/screen.svg" alt="video sobre features">
             </div>
 
         </div>
