2 information sections added

--- a/business-landing-page/index.html
+++ b/business-landing-page/index.html
@@ -101,22 +101,29 @@
         <div class="information__lateral">
             <h2 class="information__lateral___title">Fastest way to organize</h2>
             <h4 class="information__lateral__paragraph">Most calendars are designed for teams. Slate is designed for freelancers</h4>
-            <button class="information__lateral__cta">Try For Free</button>
+            <button class="information__lateral__cta btn">Try For Free</button>
         </div>
         <div class="information__image">
-            <img src="" alt="">
+            <img src="./images/laptop.svg" alt="Laptop IMG information section" width="600">
         </div>
     </section>
     <!-- Sección de Newsletter -->
     <section class="newsletter">
-        <p class="newsletter__fingertips">At your fingertips</p>
-        <h2>Lightning fast prototyping</h2>
-        <h3>Subscribe to our Newsletter</h3>
-        <p>Available exclusivery on Figmaland</p>
-        <form class="newsletter__actions" action="/suscribe" method="POST">
-            <input type="email" class="newsletter__actions__email" alt="Your email">
-            <button class="newsletter__actions_suscribe">Suscribe</button>
-        </form>
+        <div class="newsletter__image">
+            <img src="./images/newsletter_ilustration.svg" alt="Newsletter Ilustration">
+        </div>
+        <div class="newsletter__info">
+            <p class="newsletter__fingertips">At your fingertips</p>
+            <h2>Lightning fast prototyping</h2>
+            <div>
+                <h3>Subscribe to our Newsletter</h3>
+                <p>Available exclusivery on Figmaland</p>
+            </div>
+            <form class="newsletter__actions" action="/suscribe" method="POST">
+                <input type="email" class="newsletter__actions__email" alt="Your email" placeholder="Your Email">
+                <button class="newsletter__actions_suscribe btn">Suscribe</button>
+            </form>
+        </div>
     </section>
     <!-- Sección de socios o Partners --> 
     <section class="partners">
